# c-sdl-game

./: .gitignore  CMakeLists.txt  readme.md
.cache/clangd/index/: main.c.AF43A4E75F8647FE.idx
assets/piskel/: brick.piskel  button.piskel  lavathing.piskel  ness.piskel
include/: LTexture.hpp
src/: LTexture.cpp  main.c  main.cpp
